<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.unam.miapp.ConfirmarDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textStyle="bold"
        android:textSize="@dimen/Titulo"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/Margen_superior"
        />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textSize="@dimen/Datos"
        android:layout_marginTop="@dimen/Margen_superiorT"
        />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Telefono"
        android:textSize="@dimen/Datos"
        android:layout_marginTop="@dimen/Margen_superior"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="@dimen/Datos"
        android:layout_marginTop="@dimen/Margen_superior"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion"
        android:textSize="@dimen/Datos"
        android:layout_marginTop="@dimen/Margen_superior"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton2"
        android:layout_marginTop="@dimen/Margen_superior"
        android:theme="@style/MiBoton"
        />


</LinearLayout>
